fixes overflowing whitespace

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,11 @@
 body,
 html {
   height: 100%;
+  overflow-x: hidden !important;
+}
+
+body {
+  /* min-width: 380px; */
 }
 
 /* base styles */
@@ -26,6 +31,7 @@ main {
   flex-direction: column; /* center everything */
   justify-content: center; /* center everything */
   align-items: center; /* center everything */
+  overflow-x: hidden !important;
 }
 
 .weatherIcon {
